--- a/vue-frontend/public/index.html
+++ b/vue-frontend/public/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>e-HealthHub</title>
+    <style>
+      :root {
+        --primary-color: #ff7000;
+      }
+      body {
+        border: none !important;
+        margin: 0px !important;
+        padding: 0 !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>
